@@ -82,3 +82,14 @@ if ![runto_main] {
 if ![runto_main] {
     return -1
 }
+
+# make sure record-btrace can be enabled after re-run
+clean_restart $testfile
+if ![runto_main] {
+    return -1
+}
+gdb_test_no_output "record btrace"
+if ![runto_main] {
+    return -1
+}
+gdb_test_no_output "record btrace" "enable after re-run"
